--- a/HTML et CSS/afaire.html
+++ b/HTML et CSS/afaire.html
@@ -2,9 +2,10 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="afaire.css>"
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
+	<div class="afaire">
 		<p><a href="planning.html"><input type="submit" value="Planning"></a></p>
 		<p><a href="presence.html"><input type="submit" value="Présence"></a></p>
 		<p><a href="contact.html"><input type="submit" value="Contact"></a></p>
@@ -13,5 +14,6 @@
 			<select name="select" id="selection">
 				<option value="encours">En cours</option>
 				<option value="termines">Terminés</option>
+	</div>
 	</body>
 </html>
