--- a/HTML et CSS/tdl.html
+++ b/HTML et CSS/tdl.html
@@ -2,9 +2,10 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="tdl.css>"
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
+	<div class="tdl">
 		<p><a href="planning.html"><input type="submit" value="Planning"></a></p>
 		<p><a href="presence.html"><input type="submit" value="Présence"></a></p>
 		<p><a href="contact.html"><input type="submit" value="Contact"></a></p>	
@@ -12,5 +13,6 @@
 		<p><a href="afaire.html"><input type="submit" value="A faire"></a></p>
 		<p><a href="encours.html"><input type="submit" value="En cours"></a></p>
 		<p><a href="termines.html"><input type="submit" value="Termninés"></a></p>
+	</div>
 	</body>
 </html>
