--- a/HTML et CSS/users.html
+++ b/HTML et CSS/users.html
@@ -2,9 +2,10 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="css/users.css>"
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
+	<div class="users">
 		<p>Identifiant</p>
 			<form action="menu.html" method="GET">
 				<label for="écrire"></label>
@@ -13,5 +14,6 @@
 				<label for="pass"></label>
 				<input type="text" id="pass">
 		<li><input type="submit" value="Envoyer"><a href="menu.html"></a></li>
+	</div>
 	</body>
 </html>
