--- a/HTML et CSS/index.html
+++ b/HTML et CSS/index.html
@@ -2,9 +2,10 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="css/appli.css>"
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
+	<div class="index">
 		<li><a href="users.html">Nantes</a></li>
 		<li><a href="users.html">Angers</a></li>
 		<li><a href="users.html">Rennes</a></li>
@@ -12,5 +13,6 @@
 		<li><a href="users.html">Le Mans</a></li>
 		<li><a href="users.html">Caen</a></li>
 		<li><a href="users.html">Paris</a></li>
+	</div>
 	</body>
 </html>
