--- a/HTML et CSS/planning.html
+++ b/HTML et CSS/planning.html
@@ -2,12 +2,14 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="css/planning.css>"
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
+	<div class="planning">
 		<p><a href="contact.html"><input type="submit" value="Contact"></a></p>
 		<p><a href="presence.html"><input type="submit" value="Présence"></a></p>
 		<p><a href="tdl.html"><input type="submit" value="To Do List"></a></p>
 			<hr>
+	</div>
 	</body>
 </html>
