--- a/HTML et CSS/presence.html
+++ b/HTML et CSS/presence.html
@@ -2,12 +2,14 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="css/présence.css>"
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
+	<div class="presence">
 		<p><a href="planning.html"><input type="submit" value="Planning"></a></p>
 		<p><a href="contact.html"><input type="submit" value="Contact"></a></p>
 		<p><a href="tdl.html"><input type="submit" value="To Do List"></a></p>
 			<hr>
+	</div>
 	</body>
 </html>
