--- a/HTML et CSS/termines.html
+++ b/HTML et CSS/termines.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="termines.css>"
+		<link rel="stylesheet" href="css/style;css">
 	</head>
 	<body>
 		<p><a href="planning.html"><input type="submit" value="Planning"></a></p>
