maj css et menu

--- a/HTML et CSS/index.html
+++ b/HTML et CSS/index.html
@@ -6,13 +6,15 @@
 	</head>
 	<body>
 	<div class="index">
-		<li><a href="users.html">Nantes</a></li>
-		<li><a href="users.html">Angers</a></li>
-		<li><a href="users.html">Rennes</a></li>
-		<li><a href="users.html">Laval</a></li>
-		<li><a href="users.html">Le Mans</a></li>
-		<li><a href="users.html">Caen</a></li>
-		<li><a href="users.html">Paris</a></li>
+	<ul>
+		<li><div class="c1"><a href="users.html">Nantes</a></div></li>
+		<li><div class="c2"><a href="users.html">Angers</a></div></li>
+		<li><div class="c3"><a href="users.html">Rennes</a></div></li>
+		<li><div class="c4"><a href="users.html">Laval</a></div></li>
+		<li><div class="c5"><a href="users.html">Le Mans</a></div></li>
+		<li><div class="c6"><a href="users.html">Caen</a></div></li>
+		<li><div class="c7"><a href="users.html">Paris</a></div></li>
+	</ul>
 	</div>
 	</body>
 </html>
