--- a/HTML et CSS/afaire.html
+++ b/HTML et CSS/afaire.html
@@ -5,15 +5,15 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-	<div class="afaire">
+	<div class="liste_haut">
 		<p><a href="planning.html"><input type="submit" value="Planning"></a></p>
 		<p><a href="presence.html"><input type="submit" value="Présence"></a></p>
 		<p><a href="contact.html"><input type="submit" value="Contact"></a></p>
+	</div>
 			<hr>
 		<label for="monselect">Liste déroulante</label>
 			<select name="select" id="selection">
 				<option value="encours">En cours</option>
 				<option value="termines">Terminés</option>
-	</div>
 	</body>
 </html>
