--- a/HTML et CSS/contact.html
+++ b/HTML et CSS/contact.html
@@ -5,11 +5,12 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-	<div class="contact">
-		<p><a href="planning.html"><input type="submit" value="Planning"></a></p>
-		<p><a href="presence.html"><input type="submit" value="Présence"></a></p>
-		<p><a href="tdl.html"><input type="submit" value="To Do List"></a></p>	
-			<hr>
-	</div>
+	<div class="liste_haut">
+		<li><a href="planning.html"><input type="submit" value="Planning"></a></li>
+		<li><a href="presence.html"><input type="submit" value="Présence"></a></li>
+		<li><a href="tdl.html"><input type="submit" value="To Do List"></a></li>	
+	</div>			
+		<hr>
+
 	</body>
 </html>
