--- a/HTML et CSS/index.html
+++ b/HTML et CSS/index.html
@@ -6,15 +6,15 @@
 	</head>
 	<body>
 	<div class="index">
-	<ul>
-		<li><div class="c1"><a href="users.html">Nantes</a></div></li>
-		<li><div class="c2"><a href="users.html">Angers</a></div></li>
-		<li><div class="c3"><a href="users.html">Rennes</a></div></li>
-		<li><div class="c4"><a href="users.html">Laval</a></div></li>
-		<li><div class="c5"><a href="users.html">Le Mans</a></div></li>
-		<li><div class="c6"><a href="users.html">Caen</a></div></li>
-		<li><div class="c7"><a href="users.html">Paris</a></div></li>
-	</ul>
+	<center><ul>
+		<li><div class="i1"><a href="users.html">Nantes</a></div></li>
+		<li><div class="i2"><a href="users.html">Angers</a></div></li>
+		<li><div class="i3"><a href="users.html">Rennes</a></div></li>
+		<li><div class="i4"><a href="users.html">Laval</a></div></li>
+		<li><div class="i5"><a href="users.html">Le Mans</a></div></li>
+		<li><div class="i6"><a href="users.html">Caen</a></div></li>
+		<li><div class="i7"><a href="users.html">Paris</a></div></li>
+	</ul></center>
 	</div>
 	</body>
 </html>
