--- a/HTML et CSS/planning.html
+++ b/HTML et CSS/planning.html
@@ -5,11 +5,14 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-	<div class="planning">
-		<p><a href="contact.html"><input type="submit" value="Contact"></a></p>
-		<p><a href="presence.html"><input type="submit" value="Présence"></a></p>
-		<p><a href="tdl.html"><input type="submit" value="To Do List"></a></p>
-			<hr>
-	</div>
+	<div class="liste_haut">
+		<li><a href="contact.html"><input type="submit" value="Contact"></a></li>
+		<li><a href="presence.html"><input type="submit" value="Présence"></a></li>
+		<li><a href="tdl.html"><input type="submit" value="To Do List"></a></li>
+	</div>			
+		<hr>
+		
+		
+
 	</body>
 </html>
