--- a/HTML et CSS/presence.html
+++ b/HTML et CSS/presence.html
@@ -5,11 +5,41 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-	<div class="presence">
-		<p><a href="planning.html"><input type="submit" value="Planning"></a></p>
-		<p><a href="contact.html"><input type="submit" value="Contact"></a></p>
-		<p><a href="tdl.html"><input type="submit" value="To Do List"></a></p>
-			<hr>
+
+	<div class="liste_haut">
+	<center><ul>
+		<li><div class="planning"><a href="planning.html">Planning</a></div></li>
+		<li><div class="contact"><a href="contact.html">Contact</a></div></li>
+		<li><div class="tdl"><a href="tdl.html">To Do List</a></div></li>
+	</ul></center>
 	</div>
+			<hr>
+	<h1>Présence</h1>
+		<center><div class="check">
+		<ul>	
+			<form action="" method="GET">
+			<li><label for="checkbox1">nom de l'élève</label>
+			<input type="checkbox" id="checkbox1"></li>
+			<li><label for="checkbox2">nom de l'élève</label>
+			<input type="checkbox" id="checkbox2"></li>
+			<li><label for="checkbox3">nom de l'élève</label>
+			<input type="checkbox" id="checkbox3"></li>
+			<li><label for="checkbox4">nom de l'élève</label>
+			<input type="checkbox" id="checkbox4"></li>
+			<li><label for="checkbox5">nom de l'élève</label>
+			<input type="checkbox" id="checkbox5"></li>
+			<li><label for="checkbox6">nom de l'élève</label>
+			<input type="checkbox" id="checkbox6"></li>
+			<li><label for="checkbox7">nom de l'élève</label>
+			<input type="checkbox" id="checkbox7"></li>
+			<li><label for="checkbox8">nom de l'élève</label>
+			<input type="checkbox" id="checkbox8"></li>
+			<li><label for="checkbox9">nom de l'élève</label>
+			<input type="checkbox" id="checkbox9"></li>
+			<li><label for="checkbox10">nom de l'élève</label>
+			<input type="checkbox" id="checkbox10"></li>
+		</div></center>
+			<center><input type="submit" value="Envoyer la liste" class="bp">
+	
 	</body>
 </html>
