--- a/HTML et CSS/termines.html
+++ b/HTML et CSS/termines.html
@@ -5,9 +5,11 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
+	<div class="liste_haut">
 		<p><a href="planning.html"><input type="submit" value="Planning"></a></p>
 		<p><a href="presence.html"><input type="submit" value="Présence"></a></p>
 		<p><a href="contact.html"><input type="submit" value="Contact"></a></p>
+	</div>
 			<hr>
 		<!--en cours d'essai-->
 		<label for="monselect">Liste déroulante</label>
