--- a/HTML et CSS/users.html
+++ b/HTML et CSS/users.html
@@ -1,19 +1,20 @@
 <! DOCTYPE html>
 <html lang="fr">
-	<head>
-		<meta charset="utf-8">
-		<link rel="stylesheet" href="css/style.css">
-	</head>
-	<body>
-	<div class="users">
-		<p>Identifiant</p>
-			<form action="menu.html" method="GET">
-				<label for="écrire"></label>
-				<input type="text" id="id">
-		<p>Password</p>
-				<label for="pass"></label>
-				<input type="text" id="pass">
-		<li><input type="submit" value="Envoyer"><a href="menu.html"></a></li>
-	</div>
-	</body>
+    <head>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="css/style.css">
+    </head>
+    <body>
+    <center><div class="users">
+        <p>Identifiant :</p>
+            <form action="menu.html" method="GET">
+                <label for="écrire"></label>
+                <input type="text" id="id">
+        <p>Password :</p>
+                <label for="pass"></label>
+                <input type="text" id="pass">
+            <li><input type="submit" value="Envoyer" class="bouton"><a href="menu.html"></a></li>
+    </center></div>
+    </body>
 </html>
+
