--- a/HTML et CSS/menu.html
+++ b/HTML et CSS/menu.html
@@ -6,10 +6,12 @@
 	</head>
 	<body>
 	<div class="menu">
-		<p><a href="planning.html"><input type="submit" value="Planning"></a></p>
-		<p><a href="tdl.html"><input type="submit" value="To Do List"></a></p>
-		<p><a href="contact.html"><input type="submit" value="Contact"></a></p>
-		<p><a href="presence.html"><input type="submit" value="Présence"></a></p>
+		<center><ul>
+			<li><div class="m1"><a href="planning.html">Planning</a></div></li>
+			<li><div class="m2"><a href="tdl.html">To Do List</a></div></li>
+			<li><div class="m3"><a href="contact.html">Contact</a></div></li>
+			<li><div class="m4"><a href="presence.html">Présence</a></div></li>
+		</ul></center>
 	</div>
 	</body>
 </html>
